Added edit functionality to remaining sections.

--- a/src/app/modules/core/components/accordion/accordion.component.html
+++ b/src/app/modules/core/components/accordion/accordion.component.html
@@ -1,16 +1,19 @@
 <accordion-group>
 
-    <div class="btn justify-content-between d-flex w-100 shadow-none" accordion-heading [ngClass]="{ 'sticky-top-content': isStickyTop }">
-        <span class="accordion-label gsa-light-blue">
+    <div class="justify-content-between d-flex w-100 shadow-none p-0 pt-2" accordion-heading [ngClass]="{ 'sticky-top-content': isStickyTop }">
+        
             <ng-container *ngIf="accordionHeader; else defaultAccordionHeader">
                 <ng-container [ngTemplateOutlet]="accordionHeader"></ng-container>
-                {{accordionTitle}}
             </ng-container>
             <ng-template #defaultAccordionHeader>
-                {{accordionTitle}}
+                <span class="accordion-label gsa-light-blue">
+                    {{accordionTitle}}
+                </span>
             </ng-template>
-        </span>
-        <div class=" accordion-label gsa-light-blue d-inline-block float-right pull-right"><span class="fa fa-chevron-down"></span></div>
+
+        <div class=" accordion-label gsa-light-blue d-inline-block float-right pull-right">
+            <span class="fa fa-chevron-down"></span>
+        </div>
     </div>
 
     <ng-container *ngIf="accordionBody">
@@ -24,32 +27,3 @@
     </ng-container>
 
 </accordion-group>
-<!-- 
-<div class="card">
-    
-    <div class="card-header">
-        <h4 class="py-3 pl-3">                          
-            <ng-container *ngIf="accordionHeader; else defaultAccordionHeader">
-                <ng-container [ngTemplateOutlet]="accordionHeader"></ng-container>
-                {{accordionTitle}}
-            </ng-container>
-            <ng-template #defaultAccordionHeader>
-                {{accordionTitle}}
-            </ng-template>
-            <div class="d-inline-block float-right pr-3"><span class="fa fa-chevron-down"></span></div>
-        </h4>
-    </div>
-
-    <div class="card-body d-none">
-        <ng-container *ngIf="accordionBody">
-            <ng-container [ngTemplateOutlet]="accordionBody"></ng-container>
-        </ng-container>
-    </div>
-
-    <ng-container *ngIf="accordionFooter">
-        <div class="card-footer d-none">
-            <ng-container [ngTemplateOutlet]="accordionFooter"></ng-container>
-        </div>
-    </ng-container>
-
-</div> -->
