--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
@@ -1,7 +1,4 @@
 <app-form-card [sectionState]="sectionData" [sectionStatus]="sectionData.sectionStatus" *ngIf="sectionData.showSection">
-    <ng-template #formCardActions>
-        <ng-container [ngTemplateOutlet]="sectionActions"></ng-container>
-    </ng-template>
     <ng-template #formCardBody>
         <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
     </ng-template>
@@ -11,178 +8,9 @@
 <!-- Readonly Section -->
 <ng-template #readonlySection>
     <form id="solicitationProvisions">
-        <app-technical-proposal></app-technical-proposal>
-        <app-services-contract-act-labor-matrix></app-services-contract-act-labor-matrix>
+
+        <app-technical-proposal [offerStatus]="offerStatus"></app-technical-proposal>
+        <app-services-contract-act-labor-matrix [offerStatus]="offerStatus"></app-services-contract-act-labor-matrix>
+        
     </form>
-</ng-template>
-
-
-
-<!-- Edit Section -->
-<ng-template #editSection>
-    <form id="solicitationProvisions">
-
-        <div class="usa-alert usa-alert-info mb-4">
-            <div class="usa-alert-body">
-                <p>The following solicitation provisions are based on SCP-FSS-001 and are automatically included as
-                    applicable
-                    for this schedule. Each provision contains specific factors, which are laid out in the table below.
-                    Please
-                    respond completely and thoroughly to each provision as outlined in the provision-specific
-                    directions.
-                </p>
-            </div>
-        </div>
-
-        <div class="table2">
-            <table aria-labelledby="h1val" class="table table-responsive table-striped table-bordered buttonsTable">
-                <thead>
-                    <tr>
-                        <th width="70%" scope="col">Provision</th>
-                        <th width="10%" scope="col">Status</th>
-                        <th width="10%" scope="col">Respond</th>
-                        <th width="10%" scope="col">Edit</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td colspan="4">&nbsp;&nbsp;<span style="font-weight:bold">Technical Proposal</span></td>
-                    </tr>
-                    <tr>
-                        <td style="TEXT-ALIGN: LEFT">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                            Corporate Experience<span class="required"> *</span><span
-                                class="visually-hidden">Required</span></td>
-                        <td>
-                            Incomplete
-                        </td>
-                        <td class="tbl-button"><a class="btn btn-primary btn-sm"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=CorporateExperience">
-
-                                Respond
-                            </a></td>
-                        <td class="tbl-button"></td>
-                    </tr>
-                    <tr>
-                        <td style="TEXT-ALIGN: LEFT">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                            Past Performance<span class="required"> *</span><span
-                                class="visually-hidden">Required</span>
-                        </td>
-                        <td>
-                            Incomplete
-                        </td>
-                        <td class="tbl-button"><a class="btn btn-primary btn-sm"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=PastPerformance">
-
-                                Respond
-                            </a></td>
-                        <td class="tbl-button"></td>
-                    </tr>
-                    <tr>
-                        <td style="TEXT-ALIGN: LEFT">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                            Quality Control<span class="required"> *</span><span class="visually-hidden">Required</span>
-                        </td>
-                        <td>
-                            Incomplete
-                        </td>
-                        <td class="tbl-button"><a class="btn btn-primary btn-sm"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=QualityControl">
-
-                                Respond
-                            </a></td>
-                        <td class="tbl-button"></td>
-                    </tr>
-                    <tr>
-                        <td style="TEXT-ALIGN: LEFT">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                            Relevant Project Experience<span class="required"> *</span><span
-                                class="visually-hidden">Required</span></td>
-                        <td>
-                            Incomplete
-                        </td>
-                        <td class="tbl-button"><a class="btn btn-primary btn-sm"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=RelevantProjectExperience">
-
-                                Respond
-                            </a></td>
-                        <td class="tbl-button"></td>
-                    </tr>
-                    <tr>
-                        <td style="TEXT-ALIGN: LEFT">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                            Trade Agreements Act (TAA) Compliance<span class="required"> *</span><span
-                                class="visually-hidden">Required</span></td>
-                        <td>
-                            Incomplete
-                        </td>
-                        <td class="tbl-button"><a class="btn btn-primary btn-sm"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=TradeAgreementsAct">
-
-                                Respond
-                            </a></td>
-                        <td class="tbl-button"></td>
-                    </tr>
-                    <tr>
-                        <td colspan="4">&nbsp;&nbsp;<span style="font-weight:bold">Services Contract Act Labor
-                                Matrix</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="TEXT-ALIGN: LEFT">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                            SCA Matrix<span class="required"> *</span><span class="visually-hidden">Required</span></td>
-                        <td>
-                            Incomplete
-                        </td>
-                        <td class="tbl-button"><a class="btn btn-primary btn-sm"
-                                href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=scaMatrix">
-
-                                Respond
-                            </a></td>
-                        <td class="tbl-button"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </form>
-</ng-template>
-
-
-<!-- Actions-->
-<ng-template #sectionActions>
-
-    <app-modal *ngIf="offerStatus == 'In Progress'" 
-    [config]="{ modalTitle: sectionData.name, showDefaultOpenButton: true, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
-        <ng-template #modalBody>
-            <ng-container [ngTemplateOutlet]="editSection"></ng-container>
-        </ng-template>
-        <ng-template #modalFooter>
-            <input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary" (click)="saveForm()">
-            <input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
-        </ng-template>
-    </app-modal>
-
-    <span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
-        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0"
-            aria-controls="dropdown-manage">
-            <span class="gsa-light-blue">Actions</span>
-            <span class="caret"></span>
-        </button>
-        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
-            aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
-            <li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
-            <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li> 
-        <!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
-        </ul>
-    </span>
-
 </ng-template>
