--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/corporate-experience/corporate-experience.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/technical-proposal/corporate-experience/corporate-experience.component.html
@@ -1,3 +1,32 @@
+<accordion [isAnimated]="true" [closeOthers]="false">
+    <app-form-accordion
+        *ngIf="true"
+        [config]="{ 
+            title: section.title, 
+            sectionStatus: section.sectionStatus, 
+            parentOfferStatus: section.offerStatus, 
+            isStickyTop: true, 
+            showSection: section.showSection
+        }"  
+    >
+        <ng-template #formAccordionHeader>
+            <div class="flex-fill">
+                <h3 class="h5">{{ section.title }}</h3>
+            </div>
+            <button type="button" class="btn btn-light gsa-light-blue bg-primary-hover mr-4 py-1" (click)="openModal()">
+                <span class="fa fa-pencil mr-2"></span>
+                Edit
+            </button>
+        </ng-template>
+        <ng-template #formAccordionBody>
+            <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+        </ng-template>
+    </app-form-accordion>
+</accordion>
+
+
+<!-- Readonly Section -->
+<ng-template #readonlySection> 
 <div class="d-flex mb-3">
     <dt class="mr-2">(A)</dt>
     <dd class="flex-fill m-0">
@@ -106,3 +135,19 @@
         </div>
     </dd>
 </div>
+</ng-template>
+
+
+
+<!-- Modal Template -->
+<app-modal *ngIf="offerStatus == 'In Progress'"
+[config]="{ modalTitle: section.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
+            (click)="saveForm()">
+        <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModal()">
+    </ng-template>
+</app-modal>
