--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/basic-information/hazardous-materials/hazardous-materials.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/basic-information/hazardous-materials/hazardous-materials.component.html
@@ -1,200 +1,239 @@
-<div class="d-flex">
-    <dt class="mr-2">(a)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            Hazardous material, as used in this clause, includes any material defined as
-            hazardous under the latest version of Federal Standard No. 313 (including revisions
-            adopted during the term of the contract).
-        </p>
-    </dd>
-</div>
-
-<div class="d-flex">
-    <dt class="mr-2">(b)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            The offeror must list any hazardous material, as defined in paragraph (a) of this clause,
-            to be delivered under this contract. The hazardous material shall be properly identified
-            and include any applicable identification number, such as National Stock Number or Special
-            Item Number. This information shall also be included on the Material Safety Data Sheet
-            submitted under this contract.
-        </p>
-
-        <div class="col mb-5">            
-            <div class="col">
-                <h2 class="h5 border-bottom mb-3" id="yournegs">Hazardous Material Identification</h2>
+<accordion [isAnimated]="true" [closeOthers]="false">
+    <app-form-accordion
+        *ngIf="true"
+        [config]="{ 
+            title: section.title, 
+            sectionStatus: section.sectionStatus, 
+            parentOfferStatus: section.offerStatus, 
+            isStickyTop: true, 
+            showSection: section.showSection
+        }"  
+    >
+        <ng-template #formAccordionHeader>
+            <div class="flex-fill">
+                <h3 class="h5">{{ section.clauseNumber + ' - ' + section.title }}</h3>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <dt class="col">Material:</dt>
-                    <dd class="col mb-0">Metal</dd>
+            <button type="button" class="btn btn-light gsa-light-blue bg-primary-hover mr-4 py-1" (click)="openModal()">
+                <span class="fa fa-pencil mr-2"></span>
+                Edit
+            </button>
+        </ng-template>
+        <ng-template #formAccordionBody>
+            <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+        </ng-template>
+    </app-form-accordion>
+</accordion>
+
+
+<!-- Readonly Section -->
+<ng-template #readonlySection> 
+    <div class="d-flex">
+        <dt class="mr-2">(a)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                Hazardous material, as used in this clause, includes any material defined as
+                hazardous under the latest version of Federal Standard No. 313 (including revisions
+                adopted during the term of the contract).
+            </p>
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(b)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                The offeror must list any hazardous material, as defined in paragraph (a) of this clause,
+                to be delivered under this contract. The hazardous material shall be properly identified
+                and include any applicable identification number, such as National Stock Number or Special
+                Item Number. This information shall also be included on the Material Safety Data Sheet
+                submitted under this contract.
+            </p>
+
+            <div class="col mb-5">            
+                <div class="col">
+                    <h2 class="h5 border-bottom mb-3" id="yournegs">Hazardous Material Identification</h2>
                 </div>
-                <div class="col-md-6">
-                    <dt class="col">Identification Number:</dt>
-                    <dd class="col mb-0">132456789</dd>
+                <div class="row">
+                    <div class="col-md-6">
+                        <dt class="col">Material:</dt>
+                        <dd class="col mb-0">Metal</dd>
+                    </div>
+                    <div class="col-md-6">
+                        <dt class="col">Identification Number:</dt>
+                        <dd class="col mb-0">132456789</dd>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-md-6">
+                        <dt class="col">Material:</dt>
+                        <dd class="col mb-0">Metal</dd>
+                    </div>
+                    <div class="col-md-6">
+                        <dt class="col">Identification Number:</dt>
+                        <dd class="col mb-0">132456789</dd>
+                    </div>
                 </div>
             </div>
-            <hr>
-            <div class="row">
-                <div class="col-md-6">
-                    <dt class="col">Material:</dt>
-                    <dd class="col mb-0">Metal</dd>
-                </div>
-                <div class="col-md-6">
-                    <dt class="col">Identification Number:</dt>
-                    <dd class="col mb-0">132456789</dd>
-                </div>
+
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(c)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                This list must be updated during performance of the contract whenever the Contractor determines
+                that any other material to be delivered under this contract is hazardous.
+            </p>
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(d)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                The apparently successful offeror agrees to submit, for each item as required prior to award, a Material
+                Safety Data Sheet, meeting the requirements of 29 CFR 1910.1200(g) and the latest version of Federal
+                Standard No. 313, for all hazardous material identified in paragraph (b) of this clause. Data shall be
+                submitted in accordance with Federal Standard No. 313, whether or not the apparently successful offeror is
+                the actual manufacturer of these items. Failure to submit the Material Safety Data Sheet prior to award may
+                result in the apparently successful offeror being considered nonresponsible and ineligible for award.
+            </p>
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(e)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                If, after award, there is a change in the composition of the item(s) or a revision to Federal Standard No.
+                313, which renders incomplete or inaccurate the data submitted under paragraph (d) of this clause, the
+                Contractor shall promptly notify the Contracting Officer and resubmit the data.
+            </p>
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(f)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                Neither the requirements of this clause nor any act or failure to act by the Government shall relieve the
+                Contractor of any responsibility or liability for the safety of Government, Contractor, or subcontractor
+                personnel or property.
+            </p>
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(g)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                Nothing contained in this clause shall relieve the Contractor from complying with applicable Federal, State,
+                and local laws, codes, ordinances, and regulations (including the obtaining of licenses and permits) in
+                connection with hazardous material.
+            </p>
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(h)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                The Government's rights in data furnished under this contract with respect to hazardous material are as
+                follows:
+            </p>
+            <div class="d-flex">
+                <dt class="mr-2">(1)</dt>
+                <dd class="flex-fill m-0">
+                    <p>
+                        To use, duplicate and disclose any data to which this clause is applicable. The purposes of this right are
+                        to—
+                    </p>
+                    <div class="d-flex">
+                        <dt class="mr-2">(i)</dt>
+                        <dd class="flex-fill m-0">
+                            <p>
+                                Apprise personnel of the hazards to which they may be exposed in using, handling, packaging, transporting,
+                                or disposing of hazardous materials;
+                            </p>
+                        </dd>
+                    </div>
+                    <div class="d-flex">
+                        <dt class="mr-2">(ii)</dt>
+                        <dd class="flex-fill m-0">
+                            <p>
+                                Obtain medical treatment for those affected by the material; and
+                            </p>
+                        </dd>
+                    </div>
+                    <div class="d-flex">
+                        <dt class="mr-2">(iii)</dt>
+                        <dd class="flex-fill m-0">
+                            <p>
+                                Have others use, duplicate, and disclose the data for the Government for these purposes.
+                            </p>
+                        </dd>
+                    </div>  
+                </dd>
             </div>
-        </div>
+            <div class="d-flex">
+                <dt class="mr-2">(2)</dt>
+                <dd class="flex-fill m-0">
+                    <p>
+                        To use, duplicate, and disclose data furnished under this clause, in accordance with subparagraph (h)(1) of
+                        this clause, in precedence over any other clause of this contract providing for rights in data.
+                    </p>
+                </dd>
+            </div>
+            <div class="d-flex">
+                <dt class="mr-2">(3)</dt>
+                <dd class="flex-fill m-0">
+                    <p>
+                        The Government is not precluded from using similar or identical data acquired from other sources.
+                    </p>
+                </dd>
+            </div>
+        </dd>
+    </div>
+    <div class="d-flex">
+        <dt class="mr-2">(i)</dt>
+        <dd class="flex-fill m-0">
+            <p>
+                Except as provided in paragraph (i)(2) the Contractor shall prepare and submit a sufficient number of
+                Material Safety Data Sheets (MSDS's), meeting the requirements of 29 CFR 1910.1200(g) and the latest version
+                of Federal Standard No. 313, for all hazardous materials identified in paragraph (b) of this clause.
+            </p>
+            <div class="d-flex">
+                <dt class="mr-2">(1)</dt>
+                <dd class="flex-fill m-0">
+                    <p>
+                        For items shipped to consignees, the Contractor shall include a copy of the MSDS with the packing list or
+                        other suitable shipping document which accompanies each shipment. Alternatively, the Contractor is permitted
+                        to transmit MSDS's to consignees in advance of receipt of shipments by consignees, if authorized in writing
+                        by the Contracting Officer.
+                    </p>
+                </dd>
+            </div>
+            <div class="d-flex">
+                <dt class="mr-2">(2)</dt>
+                <dd class="flex-fill m-0">
+                    <p>
+                        For items shipped to consignees identified by mailing address as agency depots, distribution centers or
+                        customer supply centers, the Contractor shall provide one copy of the MSDS's in or on each shipping
+                        container. If affixed to the outside of each container, the MSDS must be placed in a weather resistant
+                        envelope.
+                    </p>
+                </dd>
+            </div>
+        </dd>
+    </div>
+</ng-template>
 
-    </dd>
-</div>
 
-<div class="d-flex">
-    <dt class="mr-2">(c)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            This list must be updated during performance of the contract whenever the Contractor determines
-            that any other material to be delivered under this contract is hazardous.
-        </p>
-    </dd>
-</div>
 
-<div class="d-flex">
-    <dt class="mr-2">(d)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            The apparently successful offeror agrees to submit, for each item as required prior to award, a Material
-            Safety Data Sheet, meeting the requirements of 29 CFR 1910.1200(g) and the latest version of Federal
-            Standard No. 313, for all hazardous material identified in paragraph (b) of this clause. Data shall be
-            submitted in accordance with Federal Standard No. 313, whether or not the apparently successful offeror is
-            the actual manufacturer of these items. Failure to submit the Material Safety Data Sheet prior to award may
-            result in the apparently successful offeror being considered nonresponsible and ineligible for award.
-        </p>
-    </dd>
-</div>
-
-<div class="d-flex">
-    <dt class="mr-2">(e)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            If, after award, there is a change in the composition of the item(s) or a revision to Federal Standard No.
-            313, which renders incomplete or inaccurate the data submitted under paragraph (d) of this clause, the
-            Contractor shall promptly notify the Contracting Officer and resubmit the data.
-        </p>
-    </dd>
-</div>
-
-<div class="d-flex">
-    <dt class="mr-2">(f)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            Neither the requirements of this clause nor any act or failure to act by the Government shall relieve the
-            Contractor of any responsibility or liability for the safety of Government, Contractor, or subcontractor
-            personnel or property.
-        </p>
-    </dd>
-</div>
-
-<div class="d-flex">
-    <dt class="mr-2">(g)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            Nothing contained in this clause shall relieve the Contractor from complying with applicable Federal, State,
-            and local laws, codes, ordinances, and regulations (including the obtaining of licenses and permits) in
-            connection with hazardous material.
-        </p>
-    </dd>
-</div>
-
-<div class="d-flex">
-    <dt class="mr-2">(h)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            The Government's rights in data furnished under this contract with respect to hazardous material are as
-            follows:
-        </p>
-        <div class="d-flex">
-            <dt class="mr-2">(1)</dt>
-            <dd class="flex-fill m-0">
-                <p>
-                    To use, duplicate and disclose any data to which this clause is applicable. The purposes of this right are
-                    to—
-                </p>
-                <div class="d-flex">
-                    <dt class="mr-2">(i)</dt>
-                    <dd class="flex-fill m-0">
-                        <p>
-                            Apprise personnel of the hazards to which they may be exposed in using, handling, packaging, transporting,
-                            or disposing of hazardous materials;
-                        </p>
-                    </dd>
-                </div>
-                <div class="d-flex">
-                    <dt class="mr-2">(ii)</dt>
-                    <dd class="flex-fill m-0">
-                        <p>
-                            Obtain medical treatment for those affected by the material; and
-                        </p>
-                    </dd>
-                </div>
-                <div class="d-flex">
-                    <dt class="mr-2">(iii)</dt>
-                    <dd class="flex-fill m-0">
-                        <p>
-                            Have others use, duplicate, and disclose the data for the Government for these purposes.
-                        </p>
-                    </dd>
-                </div>  
-            </dd>
-        </div>
-        <div class="d-flex">
-            <dt class="mr-2">(2)</dt>
-            <dd class="flex-fill m-0">
-                <p>
-                    To use, duplicate, and disclose data furnished under this clause, in accordance with subparagraph (h)(1) of
-                    this clause, in precedence over any other clause of this contract providing for rights in data.
-                </p>
-            </dd>
-        </div>
-        <div class="d-flex">
-            <dt class="mr-2">(3)</dt>
-            <dd class="flex-fill m-0">
-                <p>
-                    The Government is not precluded from using similar or identical data acquired from other sources.
-                </p>
-            </dd>
-        </div>
-    </dd>
-</div>
-
-<div class="d-flex">
-    <dt class="mr-2">(i)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            Except as provided in paragraph (i)(2) the Contractor shall prepare and submit a sufficient number of
-            Material Safety Data Sheets (MSDS's), meeting the requirements of 29 CFR 1910.1200(g) and the latest version
-            of Federal Standard No. 313, for all hazardous materials identified in paragraph (b) of this clause.
-        </p>
-        <div class="d-flex">
-    <dt class="mr-2">(1)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            For items shipped to consignees, the Contractor shall include a copy of the MSDS with the packing list or
-            other suitable shipping document which accompanies each shipment. Alternatively, the Contractor is permitted
-            to transmit MSDS's to consignees in advance of receipt of shipments by consignees, if authorized in writing
-            by the Contracting Officer.
-        </p>
-    </dd>
-</div>
-<div class="d-flex">
-    <dt class="mr-2">(2)</dt>
-    <dd class="flex-fill m-0">
-        <p>
-            For items shipped to consignees identified by mailing address as agency depots, distribution centers or
-            customer supply centers, the Contractor shall provide one copy of the MSDS's in or on each shipping
-            container. If affixed to the outside of each container, the MSDS must be placed in a weather resistant
-            envelope.
-        </p>
-    </dd>
-</div>
+<!-- Modal Template -->
+<app-modal *ngIf="offerStatus == 'In Progress'"
+[config]="{ modalTitle: section.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
+            (click)="saveForm()">
+        <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModal()">
+    </ng-template>
+</app-modal>
