--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/services-contract-act-labor-matrix/services-contract-act-labor-matrix.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/services-contract-act-labor-matrix/services-contract-act-labor-matrix.component.html
@@ -1,9 +1,7 @@
 <div class="col">
     <h2 class="h4 border-bottom mb-3">Services Contract Act Labor Matrix</h2>
 </div>
-<div class="col mb-5">
-    
-
+<div class="col">
     <accordion [isAnimated]="true" [closeOthers]="false">
         <app-form-accordion
             *ngIf="true"
@@ -14,9 +12,11 @@
                 isStickyTop: true, 
                 showSection: section.showSection
             }"  
-        >
+            >
             <ng-template #formAccordionHeader>
-                <button>Edit</button>
+                <div class="flex-fill">
+                    <h3 class="h5">{{ section.title }}</h3>
+                </div>
             </ng-template>
             <ng-template #formAccordionBody>
                 <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
@@ -29,45 +29,92 @@
 <!-- Reaonly Section -->
 <ng-template #readonlySection>
     <div class="row">
-        <div class="col-md-4">
-            <dt class="col">Name:</dt>
-            <dd class="col mb-0">Luis Najera</dd>
-            <dt class="col">Title:</dt>
-            <dd class="col mb-0">Contract Manager</dd>
-        </div>
-        <div class="col-md-4">
-            <dt class="col">Type:</dt>
-            <dd class="col mb-0">Contact for Contract Adminisation (Domestic)</dd>
-            <dt class="col">Email:</dt>
-            <dd class="col mb-0">luis.najera@gsa.gov</dd>
-        </div>
-        <div class="col-md-4">
-            <dt class="col">Phone:</dt>
-            <dd class="col mb-0">(999) 999-9999</dd>
-            <dt class="col">Fax:</dt>
-            <dd class="col mb-0">(999) 999-9999</dd>
+        <div class="col-11">
+            <div class="row">                
+                <div class="col-md-4">
+                    <dt class="col">Name:</dt>
+                    <dd class="col mb-0">Luis Najera</dd>
+                    <dt class="col">Title:</dt>
+                    <dd class="col mb-0">Contract Manager</dd>
+                </div>
+                <div class="col-md-4">
+                    <dt class="col">Type:</dt>
+                    <dd class="col mb-0">Contact for Contract Adminisation (Domestic)</dd>
+                    <dt class="col">Email:</dt>
+                    <dd class="col mb-0">luis.najera@gsa.gov</dd>
+                </div>
+                <div class="col-md-4">
+                    <dt class="col">Phone:</dt>
+                    <dd class="col mb-0">(999) 999-9999</dd>
+                    <dt class="col">Fax:</dt>
+                    <dd class="col mb-0">(999) 999-9999</dd>
+                </div>
+            </div>
+            </div>
+        <div class="col-1">
+            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
+                <span class="fa fa-pencil"></span>
+            </button>
+            <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
+                <span class="fa fa-trash"></span>
+            </button>
         </div>
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-4">
-            <dt class="col">Name:</dt>
-            <dd class="col mb-0">Luis Najera</dd>
-            <dt class="col">Title:</dt>
-            <dd class="col mb-0">Contract Manager</dd>
-        </div>
-        <div class="col-md-4">
-            <dt class="col">Type:</dt>
-            <dd class="col mb-0">Industrial Funding Fee</dd>
-            <dt class="col">Email:</dt>
-            <dd class="col mb-0">luis.najera@gsa.gov</dd>
-        </div>
-        <div class="col-md-4">
-            <dt class="col">Phone:</dt>
-            <dd class="col mb-0">(999) 999-9999</dd>
-            <dt class="col">Fax:</dt>
-            <dd class="col mb-0">(999) 999-9999</dd>
+        <div class="col-11">
+            <div class="row">                
+                <div class="col-md-4">
+                    <dt class="col">Name:</dt>
+                    <dd class="col mb-0">Luis Najera</dd>
+                    <dt class="col">Title:</dt>
+                    <dd class="col mb-0">Contract Manager</dd>
+                </div>
+                <div class="col-md-4">
+                    <dt class="col">Type:</dt>
+                    <dd class="col mb-0">Contact for Contract Adminisation (Domestic)</dd>
+                    <dt class="col">Email:</dt>
+                    <dd class="col mb-0">luis.najera@gsa.gov</dd>
+                </div>
+                <div class="col-md-4">
+                    <dt class="col">Phone:</dt>
+                    <dd class="col mb-0">(999) 999-9999</dd>
+                    <dt class="col">Fax:</dt>
+                    <dd class="col mb-0">(999) 999-9999</dd>
+                </div>
+            </div>
+            </div>
+        <div class="col-1">
+            <button type="button" class="btn btn-default btn-sm text-muted bg-primary-hover" (click)="openModal()">
+                <span class="fa fa-pencil"></span>
+            </button>
+            <button type="button" class="btn btn-default btn-sm text-muted bg-danger-hover">
+                <span class="fa fa-trash"></span>
+            </button>
         </div>
     </div>
 
+    <hr>           
+    <div class="col mt-4 d-flex justify-content-center"> 
+        <button type="button" class="btn btn-light gsa-light-blue btn bg-primary-hover" (click)="openModal()">
+            <span class="fa fa-plus mr-2"></span>
+            Add SCA Information
+        </button>
+    </div>
+
 </ng-template>
+
+
+
+<!-- Modal Template -->
+<app-modal *ngIf="offerStatus == 'In Progress'"
+[config]="{ modalTitle: section.title, showDefaultOpenButton: false, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+    <ng-template #modalBody>
+        <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+    </ng-template>
+    <ng-template #modalFooter>
+        <input type="button" value="Save" id="saveAndContinue" class="btn btn-success btn-lg"
+            (click)="saveForm()">
+        <input type="button" value="Cancel" id="cancel" class="btn btn-default btn-lg bg-danger-hover" (click)="closeModal()">
+    </ng-template>
+</app-modal>
